--- a/ntwist/src/components/Hero/hero.css
+++ b/ntwist/src/components/Hero/hero.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100vh;
   position: relative;
+  border: solid;
 }
 .hero-warpper img {
   height: 100%;
@@ -16,14 +17,19 @@
   gap: 10px;
   position: absolute;
   top: 20%;
-  left: 1%;
+  left: 0.5%;
   margin: auto;
+  /* border: solid; */
 }
 
 .hero-text-wrapper h2 {
   padding-top: 5rem;
   color: #fff;
-  font-size: 3.5rem;
+  font-size: 3.2rem;
+  /* border:solid; */
+  padding-left: 4.4rem;
+  text-align: start;
+  line-height: 3.6rem;
 }
 .hero-text-wrapper button {
   padding: 0.9rem 3rem;
@@ -32,12 +38,12 @@
   background-color: #007aff;
   color: #ffffff;
   margin-top: 1rem;
-  margin-right: 29rem;
+  margin-right: 21rem;
   font-size: 1rem;
 }
 @media screen and (max-width: 1050px) {
   .hero-text-wrapper {
-    width: 90%;
+    width: 95%;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -45,25 +51,31 @@
     left: 4%;
     /* border: solid; */
   }
-  
+
   .hero-text-wrapper h2 {
     padding-top: 5rem;
     color: #fff;
+    width: 100%;
     padding-right: 50px;
-    font-size: 2.7rem;
+    padding-left: 1.5rem;
+    font-size: 2.5rem;
   }
   .hero-image-logo img {
     width: 100%;
-  }.hero-text button {
-    padding: 1rem 1rem;
-    margin-top: 1rem;
-    font-size: .9rem;
-    margin-left: 2rem;
-    width:20%
+    object-fit: contain;
   }
-
+  .hero-text button {
+    padding: 1rem 2rem;
+    margin-top: 1rem;
+    font-size: 0.9rem;
+     margin-left:1.5rem;
+    width: 30%;
+  }
+  /* .hero-text {
+    border: solid;
+  } */
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 966px) {
   .hero-warpper {
     text-align: center;
     width: 100%;
@@ -80,8 +92,8 @@
     display: flex;
     flex-direction: column-reverse;
     position: absolute;
-    top: 10%;
-    left: 1%;
+    top: 12%;
+    left: 2%;
     margin: auto;
   }
   .hero-text-wrapper img {
@@ -89,15 +101,55 @@
     margin: auto;
   }
   .hero-text-wrapper h2 {
+    padding-top: 1rem;
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .hero-text-wrapper button {
+    width: 20%;
+    padding: 0.9rem 2rem 1rem;
+    margin-top: 1rem;
+    margin-right: 17rem;
+    font-size: 0.7rem;
+    outline: none;
+  }
+  .hero-text-wrapper div {
+    border: solid;
+  }
+}
+@media screen and (max-width: 850px) {
+  .hero-warpper {
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+  }
+  .hero-warpper img {
+    height: 100%;
+    width: 100%;
+   
+  }
+  .hero-text-wrapper {
+    width: 95%;
+    display: flex;
+    flex-direction: column-reverse;
+    position: absolute;
+    top: 10%;
+    left: 1%;
+    margin: auto;
+  }
+  .hero-text-wrapper img {
+
+    width: 55%;
+    margin: auto;
+     object-fit: cover;
+  }
+  .hero-text-wrapper h2 {
     font-size: 2.5rem;
   }
   .hero-text-wrapper button {
     width: 20%;
     padding: 0.9rem 2rem;
-    border-radius: 5px;
-    border: none;
-    background-color: #007aff;
-    color: #ffffff;
     margin-top: 1rem;
     margin-right: 17rem;
     font-size: 0.7rem;
@@ -114,7 +166,6 @@
   .hero-warpper img {
     height: 100%;
     width: 100%;
-    object-fit: cover;
   }
   .hero-text-wrapper {
     width: 95%;
@@ -128,9 +179,12 @@
   .hero-text-wrapper img {
     width: 55%;
     margin: auto;
+    object-fit: cover;
   }
   .hero-text-wrapper h2 {
     font-size: 1.5rem;
+    /* border: solid; */
+    line-height: 35px;
   }
   .hero-text-wrapper button {
     width: 35%;
@@ -140,7 +194,7 @@
     background-color: #007aff;
     color: #ffffff;
     margin-top: 1rem;
-    margin-right: 9rem;
+    margin-left: 6rem;
     font-size: 0.7rem;
     outline: none;
   }
