--- a/ntwist/src/components/Search/search.css
+++ b/ntwist/src/components/Search/search.css
@@ -1,10 +1,16 @@
-.search-wrapper{
+.search-inner{
+    display: none;
+}
+@media screen and (max-width:1050px) {
+    .search-wrapper{
+        display: block;
     background-color: rgb(0,0,0,.7);
     position: fixed;
     inset: 0;
     z-index: 9999;
 }
 .search-inner{
+     display: block;
     width:100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.811);
@@ -28,14 +34,83 @@
     flex-direction: row;
     align-items: center;
     position: absolute;
+    margin: auto;
     top: 40%;
+    left: 20%;
     padding: 0 10rem;
+    /* border: 1px solid red; */
 }
 .input-field input{
+padding: 0 3rem;
     color: white;
     outline: none;
     border: none;
     background-color: transparent;
     border-bottom: 2px solid #ffffff;
 
+}
+}
+@media screen and (max-width:850px) {
+
+   .input-field{
+   
+    top: 40%;
+    left: 10%;
+    /* border: 1px solid red; */
+}
+.input-field input{
+padding: 0 3rem;
+
+} 
+}
+@media screen and (max-width:550px) {
+
+   .input-field{
+    padding: 0 7rem;
+    top: 40%;
+    left: 5%;
+    /* border: 1px solid red; */
+}
+.input-field input{
+padding: 0 3rem;
+
+} 
+}
+@media screen and (max-width:460px) {
+
+   .input-field{
+    padding: 0 ;
+    top: 40%;
+    left: 30%;
+    /* border: 1px solid red; */
+}
+.input-field input{
+padding: 0 0rem;
+
+} 
+}
+@media screen and (max-width:380px) {
+
+   .input-field{
+    padding: 0 1rem;
+    top: 40%;
+    left: 5%;
+    /* border: 1px solid red; */
+}
+.input-field input{
+padding: 0 3rem;
+
+} 
+}@media screen and (max-width:330px) {
+
+   .input-field{
+    padding: 0;
+    top: 40%;
+    left: 5%;
+    /* border: 1px solid red; */
+}
+.input-field input{
+padding: 0 3rem;
+
+} 
 }
