--- a/ntwist/src/components/Service/service.css
+++ b/ntwist/src/components/Service/service.css
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 60px;
-  margin: 8rem 5rem;
+  margin: 6rem 5rem 3rem;
   align-items: center;
 }
 .service-info1 .des-text p {
@@ -66,16 +66,17 @@
 
 @media screen and (max-width:1050px){
   .service-info {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap:70px;
+   display: flex;
+   flex-direction: column-reverse;
+    gap:30px;
     margin: 3rem 3rem;
     align-items: center;
   }
   .service-info1 {
-    display: flex;
-    flex-direction: column-reverse;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
     margin: 3rem 3rem;
+     gap:30px;
     align-items: center;
   }
   .service-info1 .image-service {
@@ -93,8 +94,8 @@
 }
 @media screen and (max-width:750px){
   .service-info1 {
-    display: flex;
-    flex-direction: column-reverse;
+   display: grid;
+    grid-template-columns: repeat(1, 1fr);
     margin: 3rem 3rem;
     align-items: center;
   }
@@ -120,8 +121,8 @@
 }
 @media screen and (max-width:550px){
   .service-info1 {
-    display: flex;
-    flex-direction: column-reverse;
+   display: grid;
+    grid-template-columns: repeat(1, 1fr);
     margin: 3rem 3rem;
     align-items: center;
   }
@@ -163,9 +164,8 @@
 @media screen and (max-width: 430px){
   
   .service-info1 {
-    display: flex;
-    flex-direction: column-reverse;
-    margin: 3rem 3rem;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
     align-items: center;
   }
   .service-info1 .image-service {
@@ -187,4 +187,23 @@
     font-size: 13px;
     margin:  0;
   }
+}
+@media screen and (max-width: 330px){
+.des-text p {
+    font-size: 15px;
+    margin: 15px 0;
+    text-align: justify;
+    line-height: 30px;
+    font-weight: 500;
+  }
+  .service-info1 .des-text p{
+    font-size: 15px;
+    margin: 15px 0;
+    text-align: justify;
+    line-height: 30px;
+    font-weight: 500; 
+  }
+  .service-info1 ,.service-info{
+    margin: 2rem;
+  } 
 }
