--- a/ntwist/src/components/Sidebar/sidebar.css
+++ b/ntwist/src/components/Sidebar/sidebar.css
@@ -1,10 +1,16 @@
-.sidebar-modal-wrapper{
+.sidebar-modal-inner,.sidebar-modal-wrapper{
+    display: none;
+}
+@media screen and (max-width: 1050px){
+    .sidebar-modal-wrapper{
+        display: block;
     background-color: rgb(0,0,0,.7);
     position: fixed;
     inset: 0;
     z-index: 9999;
 }
 .sidebar-modal-inner{
+    display: block;
     width:100%;
     height: 100%;
     background-color: #fff;
@@ -43,6 +49,7 @@
     font-size: 35px;
     text-decoration: none;
 }
+}
 @media screen and (max-width: 550px) {
 
     .sidebar-modal-wrapper{
@@ -51,4 +58,7 @@
     .sidebar-modal-inne{
         width: 100%;
     }
+    .modal-menu li a{
+
+    font-size: 30px;}
 }
