--- a/ntwist/src/components/Sidebar/sidebar.css
+++ b/ntwist/src/components/Sidebar/sidebar.css
@@ -49,6 +49,10 @@
     font-size: 35px;
     text-decoration: none;
 }
+.accordion-Text{
+    margin-left: .5rem;
+    font-size: 1rem;
+}
 }
 @media screen and (max-width: 550px) {
 
