--- a/github/src/components/Productivity/product.css
+++ b/github/src/components/Productivity/product.css
@@ -1,5 +1,5 @@
 .pro-line{
-     background-image:linear-gradient( #6E40C9, #6E40C9);
+     background-image:linear-gradient( #44c940, #42743b,#3f423f52);
 }
 .pro-wrapper{
     background-color:#0d1117;
